--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -21,10 +21,12 @@ deploy_prod:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
     - export KUBECONFIG=$KUBECONFIG_FILE
+    - if [ -d "$KUBECONFIG_FILE" ]; then sudo rm -rf "$KUBECONFIG_FILE"; fi
     - touch $KUBECONFIG_FILE
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
     #- sudo cp -r $KUBECONFIG $KUBECONFIG_FILE
+    - echo "$KUBECONFIG" > $KUBECONFIG_FILE
     #- sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
     - sudo chown $(whoami):$(whoami) $KUBECONFIG_FILE
     - sudo ls -l $KUBECONFIG_FILE
