--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -77,6 +77,7 @@ deploy_prod:
     - sudo kubectl delete pods --all -n $NAMESPACE || true
     - sudo -E helm uninstall $RELEASE_NAME -n $NAMESPACE --kubeconfig $KUBECONFIG || true
     - helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml > rendered.yaml
+    - helm lint $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
     - |
       sudo -E helm install $RELEASE_NAME $CHART_DIR \
         --kubeconfig $KUBECONFIG \
