--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -78,6 +78,7 @@ deploy_prod:
     - sudo -E helm uninstall $RELEASE_NAME -n $NAMESPACE --kubeconfig $KUBECONFIG || true
     - helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml > rendered.yaml
     - helm lint $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
+    - helm template $RELEASE_NAME $CHART_DIR/templates/deployment.yaml -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
     - |
       sudo -E helm install $RELEASE_NAME $CHART_DIR \
         --kubeconfig $KUBECONFIG \
