--- a/helm/fastapi/templates/web-service.yaml
+++ b/helm/fastapi/templates/web-service.yaml
@@ -9,9 +9,13 @@ spec:
     app.kubernetes.io/instance: {{ .Release.Name }}
     role: web
   ports:
-    {{- range .Values.service.ports }}
-    - name: {{ .name }}
-      port: {{ .port }}
-      targetPort: {{ .targetPort }}
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
-    {{- end }}
+      name: http
+    # {{- range .Values.service.ports }}
+    # - name: {{ .name }}
+    #   port: {{ .port }}
+    #   targetPort: {{ .targetPort }}
+    #   protocol: TCP
+    # {{- end }}
