--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -77,15 +77,28 @@ deploy_prod:
     - sudo kubectl delete pods --all -n $NAMESPACE || true
     - sudo -E helm uninstall $RELEASE_NAME -n $NAMESPACE --kubeconfig $KUBECONFIG || true
     - helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
-    - |
-      sudo -E helm install $RELEASE_NAME $CHART_DIR \
-        --kubeconfig $KUBECONFIG \
-        --namespace $NAMESPACE \
-        --create-namespace \
-        -f $CHART_DIR/values.yaml \
-        -f $CHART_DIR/values-prod.yaml \
-        --set image.tag=$IMAGE_TAG \
-        --set-string db.password="$DB_PASSWORD"
+    - if helm status $RELEASE_NAME -n $NAMESPACE --kubeconfig $KUBECONFIG > /dev/null 2>&1; then
+        echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading..."
+        sudo -E helm upgrade $RELEASE_NAME $CHART_DIR \
+          --kubeconfig $KUBECONFIG \
+          --namespace $NAMESPACE \
+          -f $CHART_DIR/values.yaml \
+          -f $CHART_DIR/values-prod.yaml \
+          --set image.tag=$IMAGE_TAG \
+          --set-string db.password="$DB_PASSWORD" \
+          --timeout 10m0s --atomic;
+      else
+        echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing..."
+        sudo -E helm install $RELEASE_NAME $CHART_DIR \
+          --kubeconfig $KUBECONFIG \
+          --namespace $NAMESPACE \
+          --create-namespace \
+          -f $CHART_DIR/values.yaml \
+          -f $CHART_DIR/values-prod.yaml \
+          --set image.tag=$IMAGE_TAG \
+          --set-string db.password="$DB_PASSWORD" \
+          --timeout 10m0s --atomic;
+      fi
     #--dry-run --debug | grep -A3 "kind: Service"
     - sleep 20  
     - helm list -n $NAMESPACE  
