--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -86,7 +86,6 @@ deploy_prod:
           -f $CHART_DIR/values-prod.yaml \
           --set image.tag=$IMAGE_TAG \
           --set-string db.password="$DB_PASSWORD" \
-          --timeout 10m0s --atomic \
           --debug;
       else
         echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing..."
@@ -98,13 +97,18 @@ deploy_prod:
           -f $CHART_DIR/values-prod.yaml \
           --set image.tag=$IMAGE_TAG \
           --set-string db.password="$DB_PASSWORD" \
-          --timeout 10m0s --atomic \
           --debug;
       fi
     - sleep 20  
     - helm list -n $NAMESPACE 
-    - sudo kubectl get nodes --kubeconfig $KUBECONFIG
     - sudo kubectl get ns 
+    - sudo kubectl get pods -n $NAMESPACE
+    - sudo kubectl describe pods -n $NAMESPACE
+    - sudo kubectl logs -n $NAMESPACE
+    - sudo kubectl get svc -n $NAMESPACE
+    - sudo kubectl get statefulset -n $NAMESPACE
+    - sudo kubectl describe statefulset $RELEASE_NAME-db -n $NAMESPACE
+    - sudo describe svc $RELEASE_NAME-db -n $NAMESPACE
     - sudo -E helm get manifest $RELEASE_NAME -n $NAMESPACE --kubeconfig $KUBECONFIG | head -40
     - sudo kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
     - sudo kubectl get svc traefik -n kube-system
