--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -104,7 +104,7 @@ deploy_prod:
     - sudo kubectl get ns 
     - sudo kubectl get pods -n $NAMESPACE
     - sudo kubectl describe pods -n $NAMESPACE
-    - sudo kubectl logs -n $NAMESPACE
+    #- sudo kubectl logs -n $NAMESPACE
     - sudo kubectl get svc -n $NAMESPACE
     - sudo kubectl get statefulset -n $NAMESPACE
     - sudo kubectl describe statefulset $RELEASE_NAME-db -n $NAMESPACE
