--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -70,24 +70,11 @@ deploy_prod:
     - $BIN_DIR/helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
     - if $BIN_DIR/helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
         echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading...";
-        $BIN_DIR/helm upgrade $RELEASE_NAME $CHART_DIR \
-          --namespace $NAMESPACE \
-          -f $CHART_DIR/values.yaml \
-          -f $CHART_DIR/values-prod.yaml \
-          --set image.tag=$IMAGE_TAG \
-          --set-string db.password="$DB_PASSWORD" \
-          --debug;
-      else
-        echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
-        $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR \
-          --namespace $NAMESPACE \
-          --create-namespace \
-          -f $CHART_DIR/values.yaml \
-          -f $CHART_DIR/values-prod.yaml \
-          --set image.tag=$IMAGE_TAG \
-          --set-string db.password="$DB_PASSWORD" \
-          --debug;
-      fi
+        $BIN_DIR/helm upgrade $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
+     else
+       echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
+       $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
+     fi
     - sleep 20
     - $BIN_DIR/helm list -n $NAMESPACE
     - $BIN_DIR/kubectl get ns
