--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -75,15 +75,18 @@ deploy_prod:
        echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
        $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
      fi
-    - sleep 20
+    - sleep 40
     - $BIN_DIR/helm list -n $NAMESPACE
     - $BIN_DIR/kubectl get ns
     - $BIN_DIR/kubectl get pods -n $NAMESPACE
     - $BIN_DIR/kubectl describe pods -n $NAMESPACE
     - $BIN_DIR/kubectl get svc -n $NAMESPACE
     - $BIN_DIR/kubectl get statefulset -n $NAMESPACE
+    - $BIN_DIR/kubectl logs deployment/$RELEASE_NAME -n $NAMESPACE --tail=100
     - $BIN_DIR/helm get manifest $RELEASE_NAME -n $NAMESPACE | head -40
-    - $BIN_DIR/kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
+    - sleep 60
+    - $BIN_DIR/kubectl describe pods -n $NAMESPACE
+    - $BIN_DIR/kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=180s
     - $BIN_DIR/kubectl get svc traefik -n kube-system
     - |
       for i in {1..10}; do
