--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -17,7 +17,8 @@ migrate_db:
   stage: migrate
   before_script:
     - pip install --upgrade pip
-    - pip install -r requirements.txt
+    - pip install --user -r requirements.txt
+    - export PATH="$HOME/.local/bin:$PATH"
   script:
     - alembic upgrade head
   variables:
