--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ ormar==0.12.1
 psycopg2-binary>=2.9.9
 uvicorn==0.20.0
 httpx
-databases[sqlite]
-sqlalchemy
+databases[sqlite]>=0.3.2,<0.6.3
+sqlalchemy<1.4.42,>=1.3.18
 pytest
 alembic
 pydantic>=1.6.1,<1.10.5
