--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -20,6 +20,7 @@ migrate_db:
     - pip install --upgrade pip
     - pip install --user -r requirements.txt
     - export PATH="$HOME/.local/bin:$PATH"
+      - export PYTHONPATH=.
   script:
     - alembic upgrade head
   variables:
