--- a/helm/fastapi/values-prod.yaml
+++ b/helm/fastapi/values-prod.yaml
@@ -51,7 +51,7 @@ db:
     pullPolicy: IfNotPresent
   port: 5432
   user: fastapi_traefik_prod
-  password: fastapi_traefik_prod
+  password: traefikapi2025@
   database: fastapi_traefik_prod
   storage:
     size: 5Gi
